# argisense-zephyr-app

./: .gitignore  CMakeLists.txt  README.md  VERSION  prj.conf  sysbuild.conf  west.yml
app/: Kconfig  README.md  compile.bat
app/common/src/: argisense_dfu.h  argisense_usb.c
app/products/methane_pressure/src/: argisense_power.h  argisense_registers.h  argisense_rs485.c  argisense_rs485.h  argisense_settings.c  argisense_settings.h
app/products/ph/src/: argisense_registers.c  argisense_registers.h  argisense_rs485.c  argisense_rs485.h  argisense_settings.c  argisense_settings.h  argisense_shell.c  current_loop_output.c  current_loop_output.h  main.c  ph_measurement.c  ph_measurement.h
app/src/: argisense_dfu.c  argisense_dfu.h  argisense_power.c  argisense_registers.c  argisense_registers.h  argisense_rs485.c  argisense_settings.c  argisense_settings.h  argisense_shell.c  current_loop_output.c  current_loop_output.h  main.c  methane_sensor.c  methane_sensor.h
boards/: README.md
boards/argisense/argisense_mp_u575rg/: Kconfig.argisense_mp_u575rg  argisense_mp_u575rg.dts  board.cmake  board.yml
boards/argisense/argisense_ph_u575rg/: Kconfig.argisense_ph_u575rg  argisense_ph_u575rg.dts  board.yml
boards/argisense/argisense_ph_u575rg/support/: openocd.cfg
boards/argisense/argisense_u575rg/: Kconfig.argisense_u575rg  argisense_u575rg.dts  board.yml
docs/: dynament-platinum-methane.md  firmware-overview.docx  firmware-overview.md  htu21d-humidity.md  methane-pressure-firmware-overview.md  ph-firmware-overview.md  sensor-io-mapping.md  sensor-platform-v1-ph-analysis.md
drivers/: CMakeLists.txt  Kconfig  README.md
drivers/adc/: CMakeLists.txt  Kconfig  ads124s08.c
drivers/dac/: CMakeLists.txt  Kconfig  ad5675_i2c.c  gp8302.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/dynament_platinum/: CMakeLists.txt  Kconfig  dynament_platinum.c
drivers/sensor/htu21d/: CMakeLists.txt  Kconfig  htu21d.c
drivers/sensor/ms5803_05ba/: CMakeLists.txt  Kconfig  ms5803_05ba.c
dts/: README.md
dts/bindings/: README.md  vendor-prefixes.txt
dts/bindings/adc/: argisense,ads124s08.yaml
dts/bindings/dac/: argisense,ad5675-i2c.yaml  argisense,gp8302.yaml
dts/bindings/power/: argisense,lt3582.yaml
dts/bindings/sensor/: argisense,dynament-platinum-hydrocarbon.yaml  argisense,htu21d.yaml  argisense,ms5803-05ba.yaml
include/argisense/drivers/adc/: ads124s08.h
include/argisense/drivers/sensor/: dynament_platinum.h  ms5803_05ba.h
lib/: CMakeLists.txt  Kconfig  README.md
snippets/: README.md
snippets/argisense-u575-hsi/: snippet.yml
snippets/argisense-u575rg-hsi/: argisense_u575rg_hsi.overlay  snippet.yml
snippets/argisense-usb-console/: argisense_usb_console.conf  argisense_usb_console.overlay  snippet.yml
snippets/argisense-usb-console-test/: argisense_usb_console_test.overlay  snippet.yml
snippets/argisense-usb-update/: argisense_usb_update.conf  argisense_usb_update.overlay  snippet.yml
sysbuild/: argisense-zephyr-app.conf  mcuboot.conf
tests/: README.md
tools/rs485_dfu/: README.md  argisense_rs485_dfu_gui.py
tools/usb_mcumgr/: README.md  argisense_usb_mcumgr_gui.py
zephyr/: module.yml
